Added bootstrapping for sites for extensibility. Added site specific namespaces/directories for Instagram and Twitter, with Instagram OAuth capabilities.

--- a/assets/scss/admin/_variables.scss
+++ b/assets/scss/admin/_variables.scss
@@ -3,7 +3,9 @@
 // --------------------------------------------------
 $white : #ffffff;
 $black : #000000;
-$gray-lighter: #f9f9f9; // WP BG
+$gray-lighter: #f1f1f1; // WP BG
 
 $border: #e1e1e1;
 $border-light: #e5e5e5;
+
+$red: #a32b2e;
