--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -3,3 +3,12 @@
 // --------------------------------------------------
 @import "_variables.scss";
 @import "_mixins.scss";
+
+// Base Styles
+@import "_alerts.scss";
+
+// Meta Fields for Post Type
+@import "_meta-fields.scss";
+
+// Plugin Settings
+@import "_settings.scss";
