Search option added to twitter and instagram settings.

--- a/assets/scss/admin/_alerts.scss
+++ b/assets/scss/admin/_alerts.scss
@@ -9,3 +9,11 @@
 	color: $red;
 	border-left: 4px solid $red;
 }
+
+.social-curator-alert-success {
+	@include wptable;
+	background-color: $white;
+	padding: 8px;
+	margin-bottom: 20px;
+	border-left: 4px solid $green;
+}
