--- a/assets/scss/admin/_meta-fields.scss
+++ b/assets/scss/admin/_meta-fields.scss
@@ -1,3 +1,53 @@
 //
 // Meta Fields for Post Type
 // --------------------------------------------------
+.social-curator-meta {
+	@include clearfix;
+
+	.field-header {
+		clear: both;
+		border-bottom: 1px solid darken($white, 8%);
+		margin-bottom: 10px;
+		padding: 15px 0 8px 0;
+	}
+
+	.original-link {
+		background-color: darken($white, 8%);
+		padding: 8px;
+		margin: 10px 0 20px 0;
+		color: $white;
+		text-align: right;
+		p {
+			margin: 0;
+		}
+	}
+	
+	h3 {
+		padding: 0 !important;
+	}
+
+	label {
+		display: block;
+	}
+
+	.field {
+		float: left;
+		width: 46%;
+		clear: both;
+		margin-bottom: 10px;
+		&.even {
+			float: right;
+			clear: none;
+		}
+		&.full {
+			float: none;
+			width: 100%;
+		}
+	}
+
+	input[type="text"],
+	select {
+		width: 100%;
+	}
+
+} // .social-curator-meta
