--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -9,7 +9,7 @@
 @import "_icons.scss";
 
 // Meta Fields for Post Type
-@import "_meta-fields.scss";
+@import "_post-meta.scss";
 
 // Plugin Settings
 @import "_settings.scss";
