--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -17,3 +17,5 @@
 // Curation Page 
 @import "_curation-page.scss";
 @import "_curation-form.scss";
+@import "_post-grid.scss";
+@import "_post-status-buttons.scss";
