Custom columns created for manage posts screen, with moderation capabilities.

--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -14,6 +14,9 @@
 // Plugin Settings
 @import "_settings.scss";
 
+// Manage Post Columns
+@import "_post-columns.scss";
+
 // Curation Page 
 @import "_curation-page.scss";
 @import "_curation-form.scss";
