Style tweak on custom column

--- a/assets/scss/admin/_post-columns.scss
+++ b/assets/scss/admin/_post-columns.scss
@@ -27,3 +27,9 @@
 .social-curator-column-media {
 	text-align: center;
 }
+
+.social-curator-column-moderate {
+	select {
+		margin-right: 5px;
+	}
+}
