--- a/assets/scss/admin/_post-grid.scss
+++ b/assets/scss/admin/_post-grid.scss
@@ -59,6 +59,7 @@
 
 	.social-curator-post-content {
 		overflow: hidden;
+		font-family: "Helvetica", "Arial", sans-serif; // Overriding Open Sans for foreign languagees
 	}
 
 	.unapprove-link {
