--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -7,6 +7,7 @@
 // Base Styles
 @import "_alerts.scss";
 @import "_icons.scss";
+@import "_dropdowns.scss";
 
 // Meta Fields for Post Type
 @import "_post-meta.scss";
