Added dropdown on curator page for single post import.

--- a/assets/scss/admin/_curation-form.scss
+++ b/assets/scss/admin/_curation-form.scss
@@ -31,3 +31,13 @@
 		}
 	}
 }
+
+.social-curator-single-import {
+	width: 200px;
+	select, 
+	input[type="text"],
+	button {
+		width: 100%;
+		margin-bottom: 8px;
+	}
+}
