--- a/assets/scss/admin/social-curator-admin.scss
+++ b/assets/scss/admin/social-curator-admin.scss
@@ -8,6 +8,7 @@
 @import "_alerts.scss";
 @import "_icons.scss";
 @import "_dropdowns.scss";
+@import "_modals.scss";
 
 // Meta Fields for Post Type
 @import "_post-meta.scss";
