Pagination added to curation page.

--- a/assets/scss/admin/_post-grid.scss
+++ b/assets/scss/admin/_post-grid.scss
@@ -68,3 +68,11 @@
 	}
 
 } // single post
+
+
+.social-curator-post-grid-footer {
+	text-align: center;
+	div {
+		padding: 20px 0;
+	}
+} // footer
