--- a/assets/scss/admin/_settings.scss
+++ b/assets/scss/admin/_settings.scss
@@ -152,3 +152,28 @@
 		background-position: center;
 	}
 }
+
+// Bulk Import
+.social-curator-bulk-import {
+	h3 {
+		margin-bottom: 0;
+	}
+	p {
+		margin: 0 0 20px 0;
+	}
+	label {
+		display: block;
+		font-size: 15px;
+		font-weight: bold;
+		margin: 0 0 3px 0;
+	}
+	select {
+		min-width: 150px;
+	}
+	textarea {
+		min-width: 500px;
+		height: 200px;
+		margin-top: 10px;
+	} 
+}
+
